[gd_scene load_steps=6 format=2]

[ext_resource path="res://Picture Scene/Scen5(1).png" type="Texture" id=1]
[ext_resource path="res://Fonts/Audiowide/Audiowide-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PictureScene/Scene4.gd" type="Script" id=3]
[ext_resource path="res://Resources/Music and Sounds/Dialog.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Scene4" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
scene = "res://Scenes/PictureScene/Scene5.tscn"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Looks like I am going in search of this treasure."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "I can use grandpa's old sword too."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "I know its very old and might not be that sharp. But I gotta take it with me. Who knows what I'll face."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "I gotta buy somethings better on my way."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
